src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Abandoned_Formula__c</fullName>
        <formula>IF(
OR(
Abandoned__c = true,
AND(
Subject = &apos;Orphaned/Abandoned Call&apos;,
OR(
ISBLANK(Talk_Time__c),
Talk_Time__c = 0))), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abandoned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abandoned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abandoned?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Type_2__c</fullName>
        <description>Used to report against activity type in custom reports.</description>
        <label>Activity Type 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Time__c</fullName>
        <description>In Seconds.</description>
        <inlineHelpText>In Seconds.</inlineHelpText>
        <label>Answer Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Time__c</fullName>
        <description>In Seconds.</description>
        <inlineHelpText>In Seconds.</inlineHelpText>
        <label>Call Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conference_Time__c</fullName>
        <description>In Seconds.</description>
        <inlineHelpText>In Seconds.</inlineHelpText>
        <label>Conference Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conferences__c</fullName>
        <label>Conferences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consult_Time__c</fullName>
        <description>In Seconds.</description>
        <inlineHelpText>In Seconds.</inlineHelpText>
        <label>Consult Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Row_For_SLA__c</fullName>
        <formula>IF(
Subject != &apos;Orphaned/Abandoned Call&apos;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Row For SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disconnected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disconnected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ANI__c</fullName>
        <label>Five9 ANI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentExtension__c</fullName>
        <label>Five9 Agent Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentName__c</fullName>
        <label>Five9 Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Agent__c</fullName>
        <label>Five9 Agent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallType__c</fullName>
        <label>Five9 Call Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignId__c</fullName>
        <label>Five9CallbackCampaignId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignName__c</fullName>
        <label>Five9CallbackCampaignName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackId__c</fullName>
        <label>Five9CallbackId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackNumber__c</fullName>
        <label>Five9CallbackNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Campaign__c</fullName>
        <label>Five9 Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Cost__c</fullName>
        <label>Five9 Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Five9__Five9DNIS__c</fullName>
        <label>Five9 DNIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9HandleTime__c</fullName>
        <label>Five9 Handle Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9SessionId__c</fullName>
        <label>Five9 Session Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9WrapTime__c</fullName>
        <label>Five9 After Call Work Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gate_Name__c</fullName>
        <label>Gate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handle_Time__c</fullName>
        <formula>Value(LEFT(Five9__Five9HandleTime__c,2))*3600 + VALUE(RIGHT(LEFT(Five9__Five9HandleTime__c,5),2))*60 + VALUE(RIGHT(Five9__Five9HandleTime__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_Time__c</fullName>
        <description>In Seconds.</description>
        <inlineHelpText>In Seconds.</inlineHelpText>
        <label>Hold Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holds__c</fullName>
        <label>Holds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IVR_Time__c</fullName>
        <description>In Seconds.</description>
        <inlineHelpText>In Seconds.</inlineHelpText>
        <label>IVR Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Park_Time__c</fullName>
        <description>In Seconds.</description>
        <inlineHelpText>In Seconds.</inlineHelpText>
        <label>Park Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Field** - Denotes when a call record has already been updated through the email webservice.</description>
        <inlineHelpText>**System Field** - Denotes when a call record has already been updated through the email webservice.</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Scored__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Scored_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Scored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue_Duration__c</fullName>
        <description>In Seconds.</description>
        <inlineHelpText>In Seconds.</inlineHelpText>
        <label>Queue Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ring_Time__c</fullName>
        <description>In Seconds.</description>
        <inlineHelpText>In Seconds.</inlineHelpText>
        <label>Ring Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Level_Formula__c</fullName>
        <formula>IF(
Service_Level__c = true, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Level?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Talk_Time_Less_Hold_and_Park__c</fullName>
        <description>In Seconds.</description>
        <inlineHelpText>In Seconds.</inlineHelpText>
        <label>Talk Time Less Hold and Park</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Talk_Time__c</fullName>
        <description>In Seconds.</description>
        <inlineHelpText>In Seconds.</inlineHelpText>
        <label>Talk Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Party_Talk_Time__c</fullName>
        <description>In Seconds.</description>
        <inlineHelpText>In Seconds.</inlineHelpText>
        <label>Third Party Talk Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Abandon__c</fullName>
        <description>In Seconds.</description>
        <inlineHelpText>In Seconds.</inlineHelpText>
        <label>Time to Abandon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfers__c</fullName>
        <label>Transfers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business Call</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Finalist</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Introduction Call</fullName>
                </value>
                <value>
                    <fullName>Negotiations</fullName>
                </value>
                <value>
                    <fullName>Proactive Service Call</fullName>
                </value>
                <value>
                    <fullName>Service Issue</fullName>
                </value>
                <value>
                    <fullName>Quarterly Review</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pricing Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>